examples/test/testpolicy9725.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9725
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key41: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value17
      podSelector:
        matchLabels:
          key36: value33
          key26: value26
          key20: value49
